fix:profile width on mobile

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -12,8 +12,9 @@
 
 @media screen and (max-width: 980px) {
   .profile__subtitle {
-    font-size: calc(14px + 6.8 * ((100vw - 320px) / 980));
+    font-size: 14px;
     line-height: 16.94px;
     text-align: center;
+    max-width: 228px;
   }
 }
