--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -14,8 +14,9 @@
 
 @media screen and (max-width: 980px) {
   .profile__title {
-    font-size: calc(27px + 30.6 * ((100vw - 320px) / 980));
+    font-size:27px;
     line-height: 1.21037037037037;
     text-align: center;
+    max-width: 228px;
   }
 }
